# Bascorro_Training

packagetraining1/: CMakeLists.txt  package.xml
packagetraining1/src/: Number_Publisher.cpp  Number_Subscriber.cpp  Radio.cpp  ResetCounter.cpp  node_training.cpp  robot_news_station.cpp
packagetraining2/: CMakeLists.txt  package.xml
packagetraining2/src/: Client.cpp  Server.cpp
